--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -19,11 +19,13 @@
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rollup": "^4.18.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/rollup": "^0.54.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
