--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "@types/node": "^20.14.10",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
