--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/node": "^20.14.10",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-password-strength-bar-with-style-item": "^0.5.3",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "redux-persist": "^6.0.0",
