--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "@hookform/resolvers": "^3.9.0",
     "@types/node": "^20.14.10",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-loader-spinner": "^6.1.6",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "redux-persist": "^6.0.0",
-    "rollup": "^4.18.1"
+    "rollup": "^4.18.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
