--- a/package.json
+++ b/package.json
@@ -10,25 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^5.16.1",
     "@reduxjs/toolkit": "^2.2.6",
-    "axios": "^1.7.2",
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
+    "react-switch": "^7.0.0",
+    "react-switchery": "^1.2.3",
     "redux-persist": "^6.0.0",
-    "rollup": "^4.18.1"
+    "rollup": "^4.18.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@types/rollup": "^0.54.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
