--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.52.1",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-password-strength-bar": "^0.4.1",
     "react-password-strength-bar-with-style-item": "^0.5.3",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
