--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "@types/rollup": "^0.54.0",
