feat(app): add formatted balance

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.16.1",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/node": "^20.14.10",
+    "@types/numeral": "^2.0.5",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
