--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/numeral": "^2.0.5",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "howler": "^2.2.4",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -44,6 +45,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.0",
